added minlog cdcl file

--- a/Main.tex
+++ b/Main.tex
@@ -381,7 +381,12 @@ Signed:
 
 \input{EVDP.tex}
 
+\input{minlogdpll.tex}
+
+
 \input{ECLSA.tex}
+
+\input{minlogcdcl.tex}
 
 
 \input{BackgroundTrad.tex}
