--- a/Main.tex
+++ b/Main.tex
@@ -247,6 +247,11 @@
 \newcommand{\incompatible}[2]{\mathrm{incompatible}(#1,#2)}
 \newcommand{\modres}[1]{\overset{#1}{\underset{\text{\tiny Res}}{\vdash}}}
 \newcommand{\moddpll}[1]{\overset{#1}{\underset{\text{\tiny DPLL}}{\vdash}}}
+\newcommand{\True}{\mathrm{True}}
+\newcommand{\muu}[3]{\mu(#1;#2;#3)}
+\newcommand{\measure}[2]{|#2 \setminus\!\!\setminus \var (#1)|}
+\newcommand{\weight}[1]{\#(#1)}
+
 
 \newcommand{\BD}[1]{\mathrm{BD}(#1)}
 \newcommand{\DMA}[2]{\mathrm{DMA}(#1,#2)}
