--- a/Main.tex
+++ b/Main.tex
@@ -75,7 +75,7 @@
   }%
 }
 
-\newcommand{\mybar}{\mbox{\Large \textbar}}
+\newcommand{\mybar}[1]{\overline{#1}}
 \newcommand{\mypause}{\pause}
 \newcommand{\var}[1]{\mathrm{Var}(#1)}
 \newcommand{\freevar}[1]{\mathrm{FreeVar}(#1)}
